reflect-demo/tests/errors/invalid_reflect_field_type_function.stderr
error: reflect::Input/reflect::Output does not support bare function field type
 --> tests/errors/invalid_reflect_field_type_function.rs:3:12
  |
3 |     field: fn(&str) -> i32,
  |            ^^
